// Vitest Snapshot v1

exports[`AddPatternAction > add pattern to empty schema 1`] = `
{
  "activeSelector": {
    "kind": "pattern",
    "name": "my-pattern",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
      "status": "new",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`AddPatternAction > add pattern to empty schema 2`] = `
{
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
    },
  ],
}
`;

exports[`ChangeFieldAdminOnlyAction > make new field admin only in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": true,
          "existingFieldSpec": null,
          "isName": false,
          "list": false,
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "status": "changed",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Foo",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAdminOnlyAction > make new field admin only in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": true,
          "matchPattern": null,
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldAllowedLinkEntityTypesAction > change link entity types of a new entity field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": false,
          "linkEntityTypes": [
            "Foo",
          ],
          "list": false,
          "name": "foo",
          "required": false,
          "richTextNodes": [],
          "status": "new",
          "type": "RichText",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "status": "changed",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Foo",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldAllowedLinkEntityTypesAction > change link entity types of a new entity field 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "linkEntityTypes": [
            "Foo",
          ],
          "name": "foo",
          "required": false,
          "richTextNodes": [],
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldIsNameAction > make new string field is-name in new type 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "TitleOnly",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": true,
          "list": false,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "status": "new",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldIsNameAction > make new string field is-name in new type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "isName": true,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
      ],
      "name": "TitleOnly",
    },
  ],
}
`;

exports[`ChangeFieldIsNameAction > make other field is-name, and switch back 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "isName": true,
            "name": "title",
            "type": "String",
          },
          "isName": false,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "changed",
          "type": "String",
        },
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": true,
          "list": false,
          "multiline": false,
          "name": "other",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "status": "changed",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "TitleOnly",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldIsNameAction > make other field is-name, and switch back 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
        },
        {
          "adminOnly": false,
          "isName": true,
          "matchPattern": null,
          "multiline": false,
          "name": "other",
          "required": false,
          "type": "String",
        },
      ],
      "name": "TitleOnly",
    },
  ],
}
`;

exports[`ChangeFieldIsNameAction > make other field is-name, and switch back 3`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "isName": true,
            "name": "title",
            "type": "String",
          },
          "isName": true,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "status": "",
          "type": "String",
        },
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": false,
          "list": false,
          "multiline": false,
          "name": "other",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "TitleOnly",
      "status": "changed",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "isName": true,
              "name": "title",
              "type": "String",
            },
          ],
          "name": "TitleOnly",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldMatchPattern > set pattern on new string field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": false,
          "list": false,
          "matchPattern": "a-pattern",
          "multiline": false,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "status": "changed",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Foo",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldMatchPattern > set pattern on new string field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "matchPattern": "a-pattern",
          "multiline": false,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangeFieldMultilineAction > make new multiline field in existing entity type 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": false,
          "list": false,
          "multiline": true,
          "name": "bar",
          "required": false,
          "status": "new",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "Foo",
      "status": "changed",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [],
          "name": "Foo",
        },
      ],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeFieldMultilineAction > make new multiline field in existing entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "matchPattern": null,
          "multiline": true,
          "name": "bar",
          "required": false,
          "type": "String",
        },
      ],
      "name": "Foo",
    },
  ],
}
`;

exports[`ChangePatternPatternAction > change pattern of new pattern 1`] = `
{
  "activeSelector": {
    "kind": "pattern",
    "name": "foo",
  },
  "activeSelectorEditorScrollSignal": 1,
  "activeSelectorMenuScrollSignal": 1,
  "entityTypes": [],
  "patterns": [
    {
      "name": "foo",
      "pattern": "^this is a new pattern$",
      "status": "new",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangePatternPatternAction > change pattern of new pattern 2`] = `
{
  "patterns": [
    {
      "name": "foo",
      "pattern": "^this is a new pattern$",
    },
  ],
}
`;

exports[`ChangeTypeAuthKeyPatternAction > change pattern for new entity type 1`] = `
{
  "activeSelector": {
    "kind": "pattern",
    "name": "my-pattern",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "my-pattern",
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "status": "new",
    },
  ],
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
      "status": "new",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`ChangeTypeAuthKeyPatternAction > change pattern for new entity type 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "my-pattern",
      "fields": [],
      "name": "Foo",
    },
  ],
  "patterns": [
    {
      "name": "my-pattern",
      "pattern": "",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename entity type with fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Bar",
          ],
          "existingFieldSpec": null,
          "isName": false,
          "linkEntityTypes": undefined,
          "list": false,
          "name": "self",
          "required": false,
          "status": "new",
          "type": "EntityType",
        },
      ],
      "kind": "entity",
      "name": "Bar",
      "status": "new",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameTypeAction > add and rename entity type with fields referring to itself 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Bar",
          ],
          "name": "self",
          "required": false,
          "type": "EntityType",
        },
      ],
      "name": "Bar",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename entity type with link fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "entity",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": undefined,
          "existingFieldSpec": null,
          "isName": false,
          "linkEntityTypes": [
            "Bar",
          ],
          "list": false,
          "name": "self",
          "required": false,
          "richTextNodes": [],
          "status": "new",
          "type": "RichText",
        },
      ],
      "kind": "entity",
      "name": "Bar",
      "status": "new",
    },
  ],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [],
}
`;

exports[`RenameTypeAction > add and rename entity type with link fields referring to itself 2`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [],
          "linkEntityTypes": [
            "Bar",
          ],
          "name": "self",
          "required": false,
          "richTextNodes": [],
          "type": "RichText",
          "valueTypes": [],
        },
      ],
      "name": "Bar",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename value type with fields referring to itself 1`] = `
{
  "activeSelector": {
    "kind": "value",
    "typeName": "Bar",
  },
  "activeSelectorEditorScrollSignal": 2,
  "activeSelectorMenuScrollSignal": 2,
  "entityTypes": [],
  "patterns": [],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [],
      "patterns": [],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "changed",
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": null,
          "isName": false,
          "list": false,
          "name": "self",
          "required": false,
          "status": "new",
          "type": "ValueType",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "kind": "value",
      "name": "Bar",
      "status": "new",
    },
  ],
}
`;

exports[`RenameTypeAction > add and rename value type with fields referring to itself 2`] = `
{
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [
        {
          "adminOnly": false,
          "name": "self",
          "required": false,
          "type": "ValueType",
          "valueTypes": [
            "Bar",
          ],
        },
      ],
      "name": "Bar",
    },
  ],
}
`;

exports[`UpdateSchemaSpecificationAction > entity type with auth key pattern 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "pattern-one",
      "fields": [],
      "kind": "entity",
      "name": "Foo",
      "status": "",
    },
  ],
  "patterns": [
    {
      "name": "pattern-one",
      "pattern": "^foo$",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": "pattern-one",
          "fields": [],
          "name": "Foo",
        },
      ],
      "patterns": [
        {
          "name": "pattern-one",
          "pattern": "^foo$",
        },
      ],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;

exports[`UpdateSchemaSpecificationAction > one entity type with string field 1`] = `
{
  "activeSelector": null,
  "activeSelectorEditorScrollSignal": 0,
  "activeSelectorMenuScrollSignal": 0,
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "existingFieldSpec": {
            "matchPattern": "a-pattern",
            "multiline": true,
            "name": "string",
            "type": "String",
          },
          "isName": false,
          "list": false,
          "matchPattern": "a-pattern",
          "multiline": true,
          "name": "string",
          "required": false,
          "status": "",
          "type": "String",
        },
      ],
      "kind": "entity",
      "name": "String",
      "status": "",
    },
  ],
  "patterns": [
    {
      "name": "a-pattern",
      "pattern": "^a-pattern$",
      "status": "",
    },
  ],
  "schema": AdminSchema {
    "cachedPatternRegExps": {},
    "spec": {
      "entityTypes": [
        {
          "adminOnly": false,
          "authKeyPattern": null,
          "fields": [
            {
              "matchPattern": "a-pattern",
              "multiline": true,
              "name": "string",
              "type": "String",
            },
          ],
          "name": "String",
        },
      ],
      "patterns": [
        {
          "name": "a-pattern",
          "pattern": "^a-pattern$",
        },
      ],
      "valueTypes": [],
    },
  },
  "schemaWillBeUpdatedDueToSave": false,
  "status": "",
  "valueTypes": [],
}
`;
